# wst

./: .gitignore  LICENSE  Makefile  README.md  pyinstaller_entry.py  pyproject.toml
.claude/skills/issue-rfc-flow/: SKILL.md
.claude/skills/rfc/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: auto-release.yml  ci.yml  debug-choco.yml  release-on-tag.yml  release.yml  skip-ci-guard.yml  tag-release.yml
app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: App.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/binaries/: wst-aarch64-apple-darwin
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: commands.rs  covers.rs  db.rs  lib.rs  main.rs  models.rs
app/src/components/: BackupPane.tsx  BookCard.tsx  BookDetail.tsx  BookGrid.tsx  BookList.tsx  CoverImage.tsx  ExtrasPanel.tsx  IngestModal.tsx  SearchBar.tsx  Sidebar.tsx  Toolbar.tsx  TopicsPane.tsx
app/src/lib/: store.ts  tauri.ts  types.ts
app/src/styles/: global.css
docs/: README.md
docs/plantuml/: abstractions.puml  architecture.puml  data_model.puml  ingest_flow.puml
docs/rfcs/: 0001-soft-clustering-topics.md  0002-bundle-app-with-cli.md  0003-subject-by-clustering.md  0004-cover-consistency.md  0005-embedding-search.md  0006-search-parser.md  0007-multiplatform-releases.md  0008-install-extras-command.md  0009-release-on-merge.md  0010-auto-release-bug-fixes.md  0011-topics-include-content.md  0012-releases-not-firing.md  0013-ingest-from-gui.md  0014-backup-all-cloud-providers.md  0015-ci-release-caches.md  0016-gui-ocr-topics.md
packaging/chocolatey/: wst.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
packaging/debian/: control  postinst  prerm
packaging/homebrew/: wst.rb
research/: ocr-pdf-searchable.md  s3-backup-setup.md
scripts/: setup-s3-bucket.sh
skills/wst-cli/: SKILL.md
src/wst/: __init__.py  ai.py  backup.py  browse.py  cli.py  config.py  covers.py  db.py  document.py  ingest.py  install.py  models.py  ocr.py  output.py  pdf.py  query_parser.py  search.py  storage.py  topics.py
tests/: test_ai.py  test_backup.py  test_cli.py  test_config.py  test_content_preview.py  test_db.py  test_ingest.py  test_install.py  test_models.py  test_output.py  test_storage.py  test_topics.py
