[project]
name = "wst"
version = "0.1.0"
description = "CLI tool for organizing books and PDFs with AI-powered metadata"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "pymupdf>=1.24",
    "pydantic>=2.0",
]

[project.scripts]
wst = "wst.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
