[project]
name = "wst"
version = "0.1.0"
description = "CLI tool for organizing books and PDFs with AI-powered metadata"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "pymupdf>=1.24",
    "pydantic>=2.0",
    "InquirerPy>=0.3",
]

[project.scripts]
wst = "wst.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
