[project]
name = "wst-library"
version = "0.11.0"
description = "CLI tool for organizing books and PDFs with AI-powered metadata"
readme = "README.md"
license = "LicenseRef-Proprietary"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{name = "cnexans"}]
keywords = ["pdf", "books", "library", "metadata", "cli", "organizer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "pymupdf>=1.24",
    "pydantic>=2.0",
    "InquirerPy>=0.3",
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/cnexans/wst"
Repository = "https://github.com/cnexans/wst"
Issues = "https://github.com/cnexans/wst/issues"

[project.scripts]
wst = "wst.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
ocr = [
    "ocrmypdf>=16.0",
]
s3 = [
    "boto3>=1.28",
]
topics = [
    "sentence-transformers>=2.2",
    "scikit-learn>=1.3",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
